--- a/config/waybar.css
+++ b/config/waybar.css
@@ -10,7 +10,7 @@
     border-color: #2e3440;
     border-radius: 0;
     padding: 0 0;
-    font-family:MesloLGS NF;
+    font-family:Noto Sans;
     /* font-size: 15px; */
     margin-right: 5px;
     margin-left: 5px;
